Include Windows Service Installation method
Signed-off-by: Angelos Fountoulakis <agf@wired-net.gr> (github: AngelosF)